<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_logo">logo</string>
    <string name="app_name">手机认证</string>
    <string name="bar_img">指示导航条</string>
    <string name="login">用户登录</string>
    <string name="logining">正在登录</string>
    <string name="user_login">登录</string>
    <string name="trade_detail">交易</string>
    <string name="user_verify">用户验证</string>
    <string name="trade_sucess">交易成功</string>
    <string name="name">用户名(手机号)</string>
    <string name="password">密码</string>
    <string name="open_autologin">功能演示</string>
    <string name="delete">删除</string>
    <string name="cancel_demonstrate">取消演示</string>
    <string name="exit">退出</string>
    <string name="center_button">中间按钮</string>
    <string name="read">阅读</string>
    <string name="verifying">正在验证身份</string>
    <string name="uploading">正在上传</string>
    <string name="upload">上传</string>
    <string name="timeout_tip">很抱歉，您的操作已超时，请重新操作！</string>
    <string name="time">剩余时间</string>
    <string name="verify_success">验证成功</string>
    <string name="record_success">录制成功</string>
    <string name="if_upload">是否上传？</string>
    <string name="tip">提示</string>
    <string name="tip_content">1.身份认证分为两步,第一步为问题验证，答题后请点击"提交问题"进入下一步的验证。\n2.请在180s之内完成这两步操作。准备好了请点击 "确定"。</string>
    <string name="submit_questions">提交问题</string>
    <string name="confirm">确认</string>
    <string name="close">关闭</string>
    <string name="complete">读完</string>
    <string name="trade_number">消费了1000元。</string>
    <string name="answer">答案</string>
    <string name="verify_content_tip">请按下“阅读”键，然后阅读以下文字。</string>
    <string name="verify_content">中国的首都是北京，天气非常好！</string>
    <string name="head">头像</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="exit_success">成功退出</string>
    <string name="exit_failure">退出失败</string>
    <string name="service_error">服务端没有响应！</string>
    <string name="connection_error">网络连接错误，请检查网络连接状态！</string>
    <string name="login_failure">请检查用户名和密码！</string>
    <string name="password_failure">密码错误！</string>
    <string name="upload_failure">上传失败!</string>
    <string name="verify_failure">验证失败</string>
    <string name="emailing">正在发送邮件，请耐心等待……</string>
    <string name="send_successfully">发送成功！</string>
    <string name="send_failure">发送失败！</string>
    <string name="feedback_info">反馈信息</string>
    <string name="send">发送</string>
    <string name="help">帮助</string>
    <string name="img">图片</string>
    <string name="version_info">版权信息</string>
    <string name="version">版本：1.0</string>
    <string name="copyright">版本所有：信帧电子技术（北京）有限公司</string>
    <string name="tel">Tel:010–82783959</string>
    <string name="website">网址：<b><font color="#ffffff">http://www.teleframe.cn</font></b></string>
    <string name="address">地址：北京市海淀区上地信息产业基地信息路甲28号科实大厦A座6层A</string>
    <string name="help1">1.点击底部工具条左侧的选项按钮，可以查看相关信息。</string>
    <string name="help2">2.点击底部工具条中间的按钮，直到交易完成。</string>
    <string name="number_tip">请输入数字</string>
    <string name="login_input_null">用户名和密码不能为空！</string>
    <string name="answer_input_null">答案不能为空！</string>
    <string name="answer_failure">答案不正确，请重新作答！</string>
    <string name="hint_feedback">请留下您的建议！</string>
    <string name="phone_email">您的手机号或者电子邮箱地址！</string>
    <string name="server">服务器</string>
    <string name="server_tip">服务器不能为空！</string>
    <string name="connect_camera_failure"> 无法连接到摄像头！</string>
    <string name="register">注册</string>
    <string name="question">问题</string>
    <string name="question_set">设置问题</string>
    <string name="save">保存</string>
    <string name="reset">重置</string>
    <string name="show_question">显示所有问题</string>
    <string name="back">返回</string>
    <string name="select_pic">选择照片</string>
    <string name="take_pic">拍照</string>
    <string name="set_pic">设置照片</string>
    <string name="register_failure">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="show_all">展开</string>
    <string name="number_length_tip">用户名必须为11位的数字</string>
    <string name="password_length_tip">密码至少为6位的数字</string>
    <string name="at_least_onequestion__tip">请至少设置一个问题</string>
    <string name="picture_enpty">图片不能为空！</string>
    <string name="max_question_number">最多只能设置6个问题！</string>
    <string name="no_face">视频里没有检测到人脸！</string>
    <string name="authentication_timeout">认证超时！</string>
    <string name="server_load_toolarge">重复登录，系统负载过大，拒绝请求!</string>
    <string name="fake_news">伪造的消息，拒绝请求!</string>
    <string name="no_user"> 该用户不存在！</string>
    <string name="repeat_user"> 该用户已注册！</string>
    <string name="check_server"> 请检查服务器的配置或网络配置！</string>
    <string name="relogin"> 重复登录！</string>
    <string name="take_pic_toosmall"> 照片分辨率太低，请先设置相机的分辨率，然后重新拍照！</string>
    <string name="pic_toosmall"> 照片分辨率太低，请选择其他照片！</string>
    <string name="net_disconnect"> 网络已断开！</string>

</resources>