<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/radiobg_normal"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:alwaysDrawnWithCache="false"
        android:fadingEdge="@null"
        android:overScrollMode="never"
        android:background="@color/radiobg_normal"
        android:scrollbars="none" >

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:background="@color/radiobg_normal"
            android:layout_height="match_parent" >

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_alignParentTop="true"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/btn1"
                    style="@style/radioButton"
                    android:text="@string/login" />

                <RadioButton
                    android:id="@+id/btn2"
                    style="@style/radioButton"
                    android:text="@string/trade_detail" />

                <RadioButton
                    android:id="@+id/btn3"
                    style="@style/radioButton"
                    android:text="@string/user_verify" />

                <RadioButton
                    android:id="@+id/btn4"
                    style="@style/radioButton"
                    android:text="@string/trade_sucess" />

            </RadioGroup>

            <ImageView
                android:id="@+id/stick_title"
                android:layout_width="100dp"
                android:layout_height="4dp"
                android:layout_alignParentBottom="true"
                android:background="#ff7200"
                android:contentDescription="@string/bar_img" />
        </RelativeLayout>
    </HorizontalScrollView>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/horizontalScrollView" />


    <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:padding="12dp"
        android:text=""
        android:textColor="@color/content_bg"
        android:textSize="15sp"
        android:visibility="invisible" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/wedget_bottombar" />

</RelativeLayout>