<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/parent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/item2_bg"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/img"
            android:cropToPadding="true"
            android:gravity="center"
            android:maxHeight="35dp"
            android:maxWidth="35dp"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_lc" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/logo"
            android:layout_alignTop="@id/logo"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:layout_toRightOf="@id/logo"
            android:gravity="center"
            android:text="@string/version_info"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginTop="@dimen/margin_top"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/version"
            android:textColor="@color/white"
            android:textSize="@dimen/text_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/obtain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/version"
            android:layout_below="@id/version"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/copyright"
            android:textColor="@color/white"
            android:textSize="@dimen/text_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/version"
            android:layout_below="@id/obtain"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/tel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/version"
            android:layout_below="@id/tel"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/website"
            android:textColor="@color/white"
            android:textSize="@dimen/text_content"
            android:linksClickable="true"
            android:autoLink="all" 
            android:textStyle="bold" />

        <TextView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/web"
            android:layout_below="@id/web"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/address"
            android:textColor="@color/white"
            android:textSize="@dimen/text_content"
            android:textStyle="bold" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_alignBottom="@id/parent2"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="6dp"
        android:layout_marginRight="0dp"
        android:contentDescription="@string/img"
        android:cropToPadding="true"
        android:gravity="center"
        android:maxHeight="35dp"
        android:maxWidth="35dp"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/trigle"
        android:visibility="invisible" />

</RelativeLayout>