<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:gravity="center_horizontal"
    android:layout_marginBottom="10dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/parent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/item2_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="15dp"
         >

        <TextView
            android:id="@+id/tip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/help"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tip2"
            android:layout_below="@id/tip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/help1"
            android:textSize="15sp"
             android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tip3"
            android:layout_below="@id/tip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/help2"
            android:textSize="15sp"
             android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:cropToPadding="true"
        android:gravity="center"
        android:maxHeight="35dp"
        android:maxWidth="35dp"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/trigle"
        android:contentDescription="@string/img"
        android:visibility="invisible" />

</RelativeLayout>