<?xml version="1.0" encoding="utf-8"?>
<!-- listview的item选项 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <RelativeLayout
        style="@style/DefaultStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/radiobg_normal"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" >
        </TextView>

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/title"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <!-- 回显登录的结果 -->

            <TextView
                android:id="@+id/msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="@dimen/text_content_small" />
            <!-- 登录名 -->

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editor_hight"
                android:layout_below="@id/msg"
                android:background="@drawable/edit_bg"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:maxLength="11"
                android:paddingBottom="0dp"
                android:paddingLeft="10dp"
                android:paddingTop="0dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_content_small" />
            <!-- 密码 -->

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editor_hight"
                android:layout_alignLeft="@id/name"
                android:layout_below="@id/name"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_bg"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="11"
                android:paddingBottom="0dp"
                android:paddingLeft="10dp"
                android:paddingTop="0dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_content_small" />

            <Button
                android:id="@+id/picture_set"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_marginTop="30dp"
                android:alpha="0.8"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/set_pic"
                android:textColor="@color/white"
                android:textSize="@dimen/text_content" >
            </Button>

            <RelativeLayout
                android:id="@+id/picture_set_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/picture_set"
                android:background="@drawable/item3_bg"
                android:padding="10dp"
                android:visibility="gone" >

                <Button
                    android:id="@+id/select_pic"
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:alpha="0.8"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/select_pic"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_content" />

                <Button
                    android:id="@+id/take_pic"
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/select_pic"
                    android:alpha="0.8"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/take_pic"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_content" />

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/img"
                    android:cropToPadding="true"
                    android:maxHeight="50dp"
                    android:maxWidth="50dp"
                    android:scaleType="fitCenter" />
            </RelativeLayout>

            <Button
                android:id="@+id/question_set"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/picture_set_detail"
                android:layout_marginTop="30dp"
                android:alpha="0.8"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/question_set"
                android:textColor="@color/white"
                android:textSize="@dimen/text_content" >
            </Button>

            <RelativeLayout
                android:id="@+id/question_list_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_set"
                android:background="@drawable/item3_bg"
                android:visibility="gone"
                android:padding="10dp" >

                <EditText
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/edit_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/question"
                    android:maxEms="50"
                    android:paddingBottom="1dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="1dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/answer"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_below="@id/question"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/answer"
                    android:inputType="text"
                    android:maxEms="50"
                    android:paddingBottom="1dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="1dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/save"
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answer"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:alpha="0.8"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_content" />

                <Button
                    android:id="@+id/reset"
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answer"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/save"
                    android:alpha="0.8"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/reset"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_content" />

                <Button
                    android:id="@+id/cancel"
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answer"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/reset"
                    android:alpha="0.8"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_content"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/show_question"
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answer"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/cancel"
                    android:alpha="0.8"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/show_question"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_content" />
            </RelativeLayout>

            <Button
                android:id="@+id/register"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_list_set"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:alpha="0.8"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/text_content" />

            <Button
                android:id="@+id/back"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="20dp"
                android:alpha="0.8"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="@dimen/text_content" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>